# remora

./: .dockerignore  .editorconfig  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.sandbox  Justfile  LICENSE  README.md  ROADMAP.md  SECURITY.md  _typos.toml  audit.toml  docker-compose.yml
.claude/skills/: remora-chat.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  dependabot-automerge.yml  release.yml  scorecard.yml
bridge/: Cargo.toml
bridge/src/: main.rs
bridge/tests/: signal_test.rs
cli/: Cargo.toml
cli/src/: main.rs
cli/tests/: cli_test.rs
common/: Cargo.toml
common/src/: lib.rs
desktop/: README.md  package.json
desktop/src/: main.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: main.rs
docs/: architecture.md  deploy.sh  index.html  script.js  style.css
docs/roadmap/: admin-and-observability.md  auth-and-identity.md  clients-and-ecosystem.md  infrastructure-and-scaling.md
jetbrains/: README.md  build.gradle.kts  settings.gradle.kts
mcp/: package-lock.json  package.json
mcp/src/: index.ts
migrations/mssql/: 20260428000000_initial.sql  20260428000001_full.sql  20260428000002_indexes.sql  20260501000000_session_status.sql  20260501000001_trusted_participants.sql  20260501000002_owner_key.sql  20260518000000_session_tokens.sql  20260518000001_users.sql  20260518000002_refresh_tokens.sql  20260518000003_oauth_connections.sql  20260518000004_api_keys.sql  20260519000000_teams.sql  20260519000001_team_members.sql  20260519000002_sessions_team_id.sql
migrations/postgres/: 20260428000000_initial.sql  20260428000001_full.sql  20260428000002_indexes.sql  20260501000001_trusted_participants.sql  20260501000002_owner_key.sql  20260518000000_session_tokens.sql  20260518000001_users.sql  20260518000002_refresh_tokens.sql  20260518000003_oauth_connections.sql  20260518000004_api_keys.sql  20260519000000_teams.sql  20260519000001_team_members.sql  20260519000002_sessions_team_id.sql  20260520000000_audit_events.sql
migrations/sqlite/: 20260428000000_initial.sql  20260501000000_session_status.sql  20260501000001_trusted_participants.sql  20260518000000_session_tokens.sql  20260518000001_users.sql  20260518000002_refresh_tokens.sql  20260518000003_oauth_connections.sql  20260518000004_api_keys.sql  20260519000000_teams.sql  20260519000001_team_members.sql  20260519000002_sessions_team_id.sql  20260520000000_audit_events.sql
plugin/lua/remora/: init.lua
plugin/tests/: run_tests.sh  test_format_event.lua  test_leave_rejoin.lua  test_slash_commands.lua
scripts/: compose-test.sh  coverage.sh  deploy-check.sh  remora-cli.sh  setup.sh  smoke-test.sh  test.sh
server/: Cargo.toml  test_ci.db  test_ci.db-shm  test_ci.db-wal
server/src/: admin.rs  auth.rs  claude.rs  commands.rs  context.rs  fetch.rs  lib.rs  main.rs  quota.rs  sandbox.rs  state.rs  ws.rs
server/src/db/: mod.rs  mssql.rs  postgres.rs  sqlite.rs
server/tests/: api_keys_test.rs  api_test.rs  auth_test.rs  commands_test.rs  context_test.rs  db_test.rs  edge_cases_test.rs  fetch_test.rs  git_url_test.rs  health_test.rs  oauth_test.rs  quota_test.rs  rbac_test.rs  rbac_ws_test.rs  session_tokens_test.rs  state_test.rs  team_sessions_test.rs  teams_test.rs  trust_test.rs  ws_test.rs
server/tests/common/: mod.rs
templates/: debug.md  explain.md  pr-description.md  review.md  summarize.md  test-plan.md
vscode/: .vscodeignore  README.md  package-lock.json  package.json  tsconfig.json
vscode/src/: chatPanel.ts  commands.ts  connection.ts  extension.ts  types.ts
web/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json
web/e2e/: admin.spec.ts  chat.spec.ts  login.spec.ts  mobile.spec.ts  sessions.spec.ts  teams.spec.ts  trust.spec.ts
web/public/: manifest.json  sw.js
web/src/: admin.ts  api.ts  chat.ts  commands.ts  dom.ts  login.ts  main.ts  sessions.ts  style.css  teams.ts  types.ts  ws.ts
web/src/__tests__/: api.test.ts  (+9 more)
(+7 files in other folders)
