[package]
name = "remora-cli"
version = "0.9.3"
edition = "2021"

[[bin]]
name = "remora-cli"
path = "src/main.rs"

[dependencies]
remora-common = { path = "../common" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
reqwest = { version = "0.12", features = ["json"] }
chrono = "0.4"
colored = "3"
