[package]
name = "remora-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "remora-server"
path = "src/main.rs"

[dependencies]
remora-common = { path = "../common" }
axum = { version = "0.7", features = ["ws"] }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "json", "migrate"] }
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
subtle = "2"
futures-util = "0.3"
anyhow = "1"
tokio-util = "0.7"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
url = "2"
