[package]
name = "remora-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "remora-server"
path = "src/main.rs"

[dependencies]
remora-common = { path = "../common" }
axum = { version = "0.7", features = ["ws"] }
tower = { version = "0.5", features = ["limit"] }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "sqlite", "uuid", "chrono", "json", "migrate"] }
async-trait = "0.1"
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
subtle = "2"
futures-util = "0.3"
anyhow = "1"
tokio-util = "0.7"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
url = "2"
tiberius = { version = "0.12", features = ["chrono"], optional = true }
bb8 = { version = "0.9", optional = true }
bb8-tiberius = { version = "0.16", optional = true }

[features]
default = []
mssql = ["dep:tiberius", "dep:bb8", "dep:bb8-tiberius"]

[dev-dependencies]
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-webpki-roots"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
tempfile = "3"
futures-util = "0.3"
